--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Suman Budhathoki</title>
 
     <!-- FAVICON -->
-    <link rel="stylesheet" href="images/favicon.png">
+    <link rel="icon" href="images/logo.png" type="image/png">
     
     <!--Bootstrap css cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
