--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-sm-12 text-left mb-md-5 mb-2">
-                      <h2>PERSONAL PROJECT</h2>
+                      <h2>PERSONAL PROJECTS</h2>
                   </div>
               </div>
               <div class="row">
@@ -263,7 +263,7 @@
                 <p class = "text-white"></p>
 
 
-                <form  action="https://formsubmit.co/np03a190098@heraldcollege.edu.np" method="POST">
+                <form  action="https://formsubmit.co/sbudhathoki639@gmail.com method="POST">
                   <div class="col col-sm-2 col-lg-12 mb-4">
                     <input type="text" class="form-control" name = "Name" placeholder="Name">
                   </div>
