--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <p class = "text-white"></p>
 
 
-                <form  action="https://formsubmit.co/sbudhathoki639@gmail.com method="POST">
+                <form  action="https://formsubmit.co/sbudhathoki639@gmail.com" method="POST">
                   <div class="col col-sm-2 col-lg-12 mb-4">
                     <input type="text" class="form-control" name = "Name" placeholder="Name">
                   </div>
